sample-producer/kube-mcs/sample-producer-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-producer-dlclusterset
  namespace: istio-apps
spec:
  host: sample-producer.istio-apps.svc.clusterset.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 15s
      baseEjectionTime: 15s
